# actix_diesel_crud

./: .env  Cargo.toml
migrations/2021-06-16-004153_create_employees/: up.sql
src/: main.rs
src/employees/: mod.rs  model.rs  routes.rs
