[package]
name = "diesel-actix"
version = "0.1.0"
authors = ["Dylan Thunn <49996239+dthunn@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde_json = "1.0.64"
serde = "1.0.126"
listenfd = "0.3.3"
diesel = { version = "1.4.0", features = ["postgres"] }
dotenv = "0.15.0"